--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~48.0.15",
+    "expo": "^49.0.11",
+    "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "i": "^0.3.7",
     "npm": "^9.6.7",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "shortid": "^2.2.16",
-    "react-native-pager-view": "6.1.2"
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "13.2.2",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
